[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/elements/EmailField.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/elements/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/elements/PasswordField.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/main_menu.theme" type="Theme" id=4]
[ext_resource path="res://assets/fonts/info_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/ui/elements/StatusPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/MainMenu/LoginForm.gd" type="Script" id=7]

[node name="LoginForm" type="VBoxContainer"]
margin_left = 440.0
margin_top = 223.0
margin_right = 840.0
margin_bottom = 497.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 4 )
custom_constants/separation = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 400.0
margin_bottom = 245.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 238.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 376.0
margin_bottom = 221.0
custom_constants/separation = 10

[node name="Email" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]

[node name="Password" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]

[node name="LoginButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 136.0
margin_right = 366.0
margin_bottom = 186.0
text = "Login"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 366.0
margin_bottom = 211.0

[node name="RegisterButton" type="LinkButton" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 82.0
margin_right = 284.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "Don't have an account? Register here."

[node name="StatusPanel" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
